[project]
name = "video-tools"
version = "0.1.0"
description = "A collection of tools for video manipulation."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "moviepy>=2.0",
    "attrs>=23.2.0",
    "cattrs>=23.2.0",
    "omegaconf>=2.3.0",
]

[project.scripts]
trim-video = "video_tools.bin.trimmer:trim_video"
compose = "video_tools.bin.compose:cli"

[tool.uv]
package = true

[tool.uv.sources]
video-tools = { path = "." }

[tool.setuptools]
packages = ["video_tools"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.4.4",
]


[project.optional-dependencies]
test = [
    "pytest~=8.3.5", # Compatible release
    "pre-commit~=3.5.0", # Compatible release
]
